[package]
name = "enro"
version = "0.2.0"
edition = "2021"
license = "BSD-3-Clause"
description = "A command-line tool for file type detection and entropy analysis"
authors = ["D.N. Korenev <https://github.com/Kseen715>"]
repository = "https://github.com/Kseen715/enro"
readme = "README.md"
keywords = ["file-analysis", "entropy", "file-type-detection", "cli-tool", "rust"]
categories = ["command-line-utilities"]

[profile.dev]
opt-level = 0
lto = "off"
incremental = true

[profile.release]
opt-level = 3
lto = true

[profile.test]
opt-level = 0
lto = "off"
incremental = true

[profile.bench]
opt-level = 3
lto = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "2.1"
indicatif = "0.17"
prettytable-rs = "0.10"
walkdir = "2.5"
terminal_size = "0.4"
infer = "0.16"
rayon = "1.10"
sysinfo = "0.33"
